--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-expand-sm bg-warning">
         <div class="container"> <!-- início container -->
 
-        <a href="#" class="navbar-brand ms-5">
+        <a href="#" class="navbar-brand ms-logo">
           <img src="img/logo.png" width="142">
         </a>
 
@@ -55,7 +55,7 @@
       </nav>
     </header> <!-- fim cabeçalho -->
 
-    <section id="home"> <!-- início section -->
+    <section id="home"> <!-- início section home -->
 
       <div class="container">
         <div class="row">
@@ -84,12 +84,111 @@
             </div>
           </div> <!-- fim texto da seção -->
           <div class="col-md-6 d-none d-md-block"> <!-- início imagem da seção -->
-            <img src="img/capa-mulher.png">
+            <img class="ms-5" src="img/capa-mulher.png">
           </div> <!-- fim imagem da seção -->
         </div>
       </div>
+    </section>  <!-- fim section home -->
 
-    </section>  <!-- fim section -->
+    <section class="caixa"> <!-- início section saiba -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 d-flex"> <!-- início textos -->
+            <div class="align-self-center">
+              <h2>Saiba para onde vai o seu dinheiro!</h2>
+              <p>
+                Com o Finans, você categoriza todos os seus lançamentos. Com gráficos simples,
+                você sabe de onde vem e para onde vai o seu dinheiro.
+              </p>
+              <a href="#" class="btn btn-primary">Veja mais</a>
+            </div>
+          </div> <!-- fim textos -->
+          <div class="col-md-6"> <!-- início imagem -->
+            <img src="img/saiba.png" class="img-fluid">
+          </div>  <!-- fim imagem -->
+        </div>
+      </div>
+    </section> <!-- fim section saiba -->
+
+    <section class="caixa"> <!-- início section juros -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6"> <!-- início imagem -->
+            <img src="img/juros.png" class="img-fluid">
+          </div>  <!-- fim imagem -->
+          <div class="col-md-6 d-flex"> <!-- início textos -->
+            <div class="align-self-center">
+              <h2>Pare de pagar juros e economize!</h2>
+              <p>
+                Manter as contas em dia é sempre um problema? O Finans avisa você:
+                receba alertas de contas a pagar e a receber!
+              </p>
+              <a href="#" class="btn btn-primary">Veja mais</a>
+            </div>
+          </div> <!-- fim textos -->
+        </div>
+      </div>
+    </section> <!-- fim section juros -->
+
+    <section class="caixa"> <!-- início section recursos -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="img/facil.png" class="img-fluid">
+            <h4>Fácil de usar</h4>
+            <p>
+              O Finans vai além do básico e permite que você faça controles incríveis, essenciais
+              para suas finanças. Simples como tem que ser!
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img src="img/economize.png" class="img-fluid">
+            <h4>Economize seu tempo</h4>
+            <p>
+              Tempo é dinheiro! Em segundos, você tem tudo sob controle e aproveite seu tempo com o
+              que realmente importe para você!
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img src="img/suporte.png" class="img-fluid">
+            <h4>Suporte amigo</h4>
+            <p>
+              Dúvidas? Perguntas? Nosso suporte super legal ajuda você! A gente tá aqui para resolver
+              seus problemas e deixar sua vida mais fácil!
+            </p>
+          </div>
+        </div>
+      </div>
+    </section> <!-- fim section recursos -->
+
+    <footer class="mb-4 mt-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <p>
+              <a class="link-secondary" href="#">Home</a>
+              <a class="link-secondary" href="#">Recursos</a>
+              <a class="link-secondary" href="#">Benefícios</a>
+              <a class="link-secondary" href="#">Preços</a>
+            </p>
+          </div>
+          <div class="col-md-4 d-flex justify-content-end">
+              <a href="" class="text-secondary">
+                <i class="fa-brands fa-facebook fa-xl"></i>
+              </a>
+              <a href="" class="text-secondary ms-4">
+                <i class="fa-brands fa-twitter fa-xl"></i>
+              </a>
+              <a href="" class="text-secondary ms-4">
+                <i class="fa-brands fa-instagram fa-xl"></i>
+              </a>
+              <a href="" class="text-secondary ms-4">
+                <i class="fa-brands fa-youtube fa-xl"></i>
+              </a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
 
